# binary-star

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Changelog.md  README.html  README.md  agent_backtest.py  agent_orchestrator.py  apply_patch.py  apply_patches.py  backtest.py  calculate_qty.py  coach.py  common_ts.txt  evolve_system.py  export_strategy.py  forensic_dashboard.py  main.py  market_scanner.py  market_scanner_service.py  observer.py  pipeline_orchestrator.py  predictor.py  pyproject.toml  requirements.txt  review.py  reviewer.py  reviewer_main.py  reviewer_mock_outcome.py  reviewer_replay.py  reviewer_retest.py  run.py  run_audit.py  run_backtest.py  run_engine.py  run_evolution.py  run_evolver.py  run_market.py  (+11 more)
.claude/: settings.json  statusline.sh
config/: agent_config.yaml  config.yaml  global_config.yaml  network_config.yaml  strategy_config.yaml  strategy_config.yaml.bak  symbol_config.yaml  users.json  visual_config.yaml
docs/: 2026-07-06-otoco-migration-design.md  2026-07-06-otoco-migration-plan.md  adversarial-debate-protocol.md  agent-kit-migration.md  audit_remediation_tracker.md  audit_report_20260626_030000.md  audit_report_20260628_000000.md  audit_report_20260630_030000.md  audit_round2_impact_effort.md  binary_star.md  order_management_audit_20260630_125657.md  order_management_audit_20260704_013000.md  order_management_audit_20260706.md  signal-stack-redesign-2026-07-07.md  sniper_monitor_log.md  sniper_signal_analysis_20260626.md  summary-20260624.md  trigger-design-20260625.md
samples/: cleanup_samples.py  (+2 more)
(+396 files in other folders)
